--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -1049,6 +1049,12 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gravity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fao-3Q-ujd">
+                                <rect key="frame" x="160" y="315" width="55" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -1056,6 +1062,7 @@
                             <constraint firstItem="4Cn-oU-l3k" firstAttribute="centerX" secondItem="khQ-ga-gg0" secondAttribute="centerX" constant="2.5" id="4vZ-E6-Qsy"/>
                             <constraint firstItem="zUU-Ae-L4w" firstAttribute="centerX" secondItem="khQ-ga-gg0" secondAttribute="centerX" id="5HA-DD-Q2h"/>
                             <constraint firstItem="z6h-wb-ypw" firstAttribute="top" secondItem="8L2-AX-HWT" secondAttribute="bottom" constant="8" symbolic="YES" id="854-uH-Hgc"/>
+                            <constraint firstItem="fao-3Q-ujd" firstAttribute="centerX" secondItem="khQ-ga-gg0" secondAttribute="centerX" id="F2H-7g-apk"/>
                             <constraint firstItem="khQ-ga-gg0" firstAttribute="trailing" secondItem="taQ-PZ-RKQ" secondAttribute="trailing" constant="34" id="FL7-hw-rQg"/>
                             <constraint firstItem="9uE-Qf-Cxd" firstAttribute="trailing" secondItem="khQ-ga-gg0" secondAttribute="trailing" id="IWR-WK-cR6"/>
                             <constraint firstItem="z6h-wb-ypw" firstAttribute="centerX" secondItem="khQ-ga-gg0" secondAttribute="centerX" constant="3" id="JO1-n6-5ol"/>
@@ -1073,6 +1080,7 @@
                             <constraint firstItem="zUU-Ae-L4w" firstAttribute="top" secondItem="khQ-ga-gg0" secondAttribute="top" constant="19" id="heD-2r-0aG"/>
                             <constraint firstItem="9uE-Qf-Cxd" firstAttribute="leading" secondItem="khQ-ga-gg0" secondAttribute="leading" id="kg3-e4-nqw"/>
                             <constraint firstItem="8L2-AX-HWT" firstAttribute="top" secondItem="taQ-PZ-RKQ" secondAttribute="bottom" constant="8" symbolic="YES" id="mkp-AN-lK1"/>
+                            <constraint firstItem="fao-3Q-ujd" firstAttribute="top" secondItem="n0a-kk-u2I" secondAttribute="bottom" constant="8" symbolic="YES" id="paK-LV-4te"/>
                             <constraint firstItem="khQ-ga-gg0" firstAttribute="trailing" secondItem="n0a-kk-u2I" secondAttribute="trailing" constant="26" id="ra3-6q-T1J"/>
                             <constraint firstItem="8L2-AX-HWT" firstAttribute="centerX" secondItem="khQ-ga-gg0" secondAttribute="centerX" id="umC-Jr-DaE"/>
                             <constraint firstItem="n0a-kk-u2I" firstAttribute="leading" secondItem="khQ-ga-gg0" secondAttribute="leading" constant="23" id="vGZ-fp-WZs"/>
