--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -1001,10 +1001,18 @@
                                     <constraint firstAttribute="width" constant="375" id="wFZ-ct-i85"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zUU-Ae-L4w">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zUU-Ae-L4w">
                                 <rect key="frame" x="165" y="83" width="45" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Name">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <font key="NSFont" metaFont="system" size="17"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="right" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            <integer key="NSUnderline" value="1"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nameUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wVX-VH-CKb">
@@ -1061,13 +1069,27 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Population" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tGZ-NQ-nYT">
+                                <rect key="frame" x="147" y="368" width="81" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="populationUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="irZ-zs-9Ax">
+                                <rect key="frame" x="23" y="397" width="326" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="wVX-VH-CKb" firstAttribute="trailing" secondItem="n0a-kk-u2I" secondAttribute="trailing" id="2fL-hY-MGP"/>
                             <constraint firstItem="4Cn-oU-l3k" firstAttribute="centerX" secondItem="khQ-ga-gg0" secondAttribute="centerX" constant="2.5" id="4vZ-E6-Qsy"/>
                             <constraint firstItem="zUU-Ae-L4w" firstAttribute="centerX" secondItem="khQ-ga-gg0" secondAttribute="centerX" id="5HA-DD-Q2h"/>
+                            <constraint firstItem="irZ-zs-9Ax" firstAttribute="top" secondItem="tGZ-NQ-nYT" secondAttribute="bottom" constant="8" symbolic="YES" id="6DV-jy-FaG"/>
                             <constraint firstItem="z6h-wb-ypw" firstAttribute="top" secondItem="8L2-AX-HWT" secondAttribute="bottom" constant="8" symbolic="YES" id="854-uH-Hgc"/>
+                            <constraint firstItem="irZ-zs-9Ax" firstAttribute="leading" secondItem="IBx-dQ-YBi" secondAttribute="leading" id="CCg-5V-dpd"/>
                             <constraint firstItem="fao-3Q-ujd" firstAttribute="centerX" secondItem="khQ-ga-gg0" secondAttribute="centerX" id="F2H-7g-apk"/>
                             <constraint firstItem="khQ-ga-gg0" firstAttribute="trailing" secondItem="taQ-PZ-RKQ" secondAttribute="trailing" constant="34" id="FL7-hw-rQg"/>
                             <constraint firstItem="9uE-Qf-Cxd" firstAttribute="trailing" secondItem="khQ-ga-gg0" secondAttribute="trailing" id="IWR-WK-cR6"/>
@@ -1083,10 +1105,13 @@
                             <constraint firstItem="n0a-kk-u2I" firstAttribute="top" secondItem="nhG-iZ-AVk" secondAttribute="bottom" constant="8" symbolic="YES" id="SQ9-v9-DZH"/>
                             <constraint firstItem="nhG-iZ-AVk" firstAttribute="top" secondItem="z6h-wb-ypw" secondAttribute="bottom" constant="8" symbolic="YES" id="YHa-AJ-sqc"/>
                             <constraint firstItem="taQ-PZ-RKQ" firstAttribute="top" secondItem="4Cn-oU-l3k" secondAttribute="bottom" constant="8" symbolic="YES" id="a7B-v8-vUU"/>
+                            <constraint firstItem="tGZ-NQ-nYT" firstAttribute="centerX" secondItem="khQ-ga-gg0" secondAttribute="centerX" id="c98-uB-JNg"/>
                             <constraint firstItem="wVX-VH-CKb" firstAttribute="leading" secondItem="n0a-kk-u2I" secondAttribute="leading" id="dpE-9H-8ze"/>
                             <constraint firstItem="nhG-iZ-AVk" firstAttribute="centerX" secondItem="z6h-wb-ypw" secondAttribute="centerX" constant="-3.5" id="eue-tj-80w"/>
+                            <constraint firstItem="tGZ-NQ-nYT" firstAttribute="top" secondItem="IBx-dQ-YBi" secondAttribute="bottom" constant="8" symbolic="YES" id="g8h-qb-KJn"/>
                             <constraint firstItem="zUU-Ae-L4w" firstAttribute="top" secondItem="khQ-ga-gg0" secondAttribute="top" constant="19" id="heD-2r-0aG"/>
                             <constraint firstItem="9uE-Qf-Cxd" firstAttribute="leading" secondItem="khQ-ga-gg0" secondAttribute="leading" id="kg3-e4-nqw"/>
+                            <constraint firstItem="irZ-zs-9Ax" firstAttribute="centerX" secondItem="khQ-ga-gg0" secondAttribute="centerX" constant="-1.5" id="lNP-Qs-Ej9"/>
                             <constraint firstItem="IBx-dQ-YBi" firstAttribute="trailing" secondItem="n0a-kk-u2I" secondAttribute="trailing" id="m7k-Zk-GLb"/>
                             <constraint firstItem="8L2-AX-HWT" firstAttribute="top" secondItem="taQ-PZ-RKQ" secondAttribute="bottom" constant="8" symbolic="YES" id="mkp-AN-lK1"/>
                             <constraint firstItem="fao-3Q-ujd" firstAttribute="top" secondItem="n0a-kk-u2I" secondAttribute="bottom" constant="8" symbolic="YES" id="paK-LV-4te"/>
